test_dir/logs_backup/gcc/00.3/fopen_gcc_2016-12-01-17:06:23.txt
--------------------------------------------------------------------------------------------
seed: 11696
blaster.c:1:0: fatal error: can’t open /tmp/ccDHojDM.s for writing: Invalid argument
 /*
 ^
compilation terminated.
The bug is not reproducible, so it is likely a hardware or OS problem.
seed: 11696
shared.c:1:0: fatal error: can’t open /tmp/ccDHojDM.s for writing: Invalid argument
 /*
 ^
compilation terminated.
The bug is not reproducible, so it is likely a hardware or OS problem.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 15204
seed: 15204
seed: 15204
seed: 15204
seed: 15204
seed: 15204
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 18917
seed: 18917
seed: 18917
seed: 18917
seed: 18917
seed: 18917
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 1279
seed: 1279
seed: 1279
seed: 1279
seed: 1279
seed: 1279
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 11048
seed: 11048
seed: 11048
seed: 11048
seed: 11048
seed: 11048
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 31174
blaster.c:1:0: fatal error: can’t open /tmp/ccrHonHd.s for writing: Invalid argument
 /*
 ^
compilation terminated.
The bug is not reproducible, so it is likely a hardware or OS problem.
seed: 31174
shared.c:1:0: fatal error: can’t open /tmp/ccrHonHd.s for writing: Invalid argument
 /*
 ^
compilation terminated.
The bug is not reproducible, so it is likely a hardware or OS problem.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 28017
blaster.c:1:0: fatal error: can’t open /tmp/cc8u8gEf.s for writing: Invalid argument
compilation terminated.
The bug is not reproducible, so it is likely a hardware or OS problem.
seed: 28017
shared.c:1:0: fatal error: can’t open /tmp/cc8u8gEf.s for writing: Invalid argument
compilation terminated.
The bug is not reproducible, so it is likely a hardware or OS problem.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 7997
seed: 7997
seed: 7997
seed: 7997
seed: 7997
seed: 7997
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 25278
blaster.c:1:0: fatal error: can’t open /tmp/ccUosGVr.s for writing: Invalid argument
 /*
 ^
compilation terminated.
The bug is not reproducible, so it is likely a hardware or OS problem.
seed: 25278
shared.c:1:0: fatal error: can’t open /tmp/ccUosGVr.s for writing: Invalid argument
 /*
 ^
compilation terminated.
The bug is not reproducible, so it is likely a hardware or OS problem.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 26587
blaster.c:1:0: fatal error: can’t open /tmp/ccTyhXtw.s for writing: Invalid argument
 /*
 ^
compilation terminated.
The bug is not reproducible, so it is likely a hardware or OS problem.
seed: 26587
shared.c:1:0: fatal error: can’t open /tmp/ccTyhXtw.s for writing: Invalid argument
 /*
 ^
compilation terminated.
The bug is not reproducible, so it is likely a hardware or OS problem.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 27017
seed: 27017
seed: 27017
seed: 27017
seed: 27017
seed: 27017collect2: error: ld returned 1 exit status

--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 21200
seed: 21200
seed: 21200
seed: 21200
seed: 21200
seed: 21200
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 2246
seed: 2246
seed: 2246
seed: 2246
seed: 2246
seed: 2246collect2: error: ld returned 1 exit status

--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 9440
blaster.c:1:0: fatal error: can’t open /tmp/ccm32CsG.s for writing: Invalid argument
 /*
 ^
compilation terminated.
The bug is not reproducible, so it is likely a hardware or OS problem.
seed: 9440
shared.c:1:0: fatal error: can’t open /tmp/ccm32CsG.s for writing: Invalid argument
 /*
 ^
compilation terminated.
The bug is not reproducible, so it is likely a hardware or OS problem.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 32326
seed: 32326
seed: 32326
seed: 32326
seed: 32326
seed: 32326collect2: error: ld returned 1 exit status

--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 24587
seed: 24587
seed: 24587
seed: 24587
seed: 24587
seed: 24587collect2: error: ld returned 1 exit status

--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 11696
blaster.c:1:0: fatal error: can’t open /tmp/ccddlP3S.s for writing: Invalid argument
 /*
 ^
compilation terminated.
The bug is not reproducible, so it is likely a hardware or OS problem.
seed: 11696
shared.c:1:0: fatal error: can’t open /tmp/ccddlP3S.s for writing: Invalid argument
 /*
 ^
compilation terminated.
The bug is not reproducible, so it is likely a hardware or OS problem.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 1566
blaster.c:1:0: fatal error: can’t open /tmp/ccHB3U8Z.s for writing: Invalid argument
 /*
 ^
compilation terminated.
The bug is not reproducible, so it is likely a hardware or OS problem.
seed: 1566
shared.c:1:0: fatal error: can’t open /tmp/ccHB3U8Z.s for writing: Invalid argument
 /*
 ^
compilation terminated.
The bug is not reproducible, so it is likely a hardware or OS problem.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 21653
seed: 21653
seed: 21653
seed: 21653
seed: 21653
seed: 21653
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 15047
seed: 15047
seed: 15047
seed: 15047
seed: 15047
seed: 15047collect2: error: ld returned 1 exit status

--------------------------------------------------------------------------------------------
